* Interface changes:
 - none, API and ABI backwards-compatible with 0.27.x and later
* New interfaces and features:
 - ne_ssl.h: added ne_ssl_clicert_import, ne_ssl_context_get_flag
 - ne_session.h: added ne_set_addrlist2
 - ne_socket.h: added ne_addr_canonical
 - ne_auth.h: added NE_AUTH_GSSAPI_ONLY, NE_AUTH_SSPI (Nathanael Rensen)
 - ne_basic.h: added NE_CAP_EXT_MKCOL options test
* Bug fixes:
 - ne_path_escape: fix excessive memory allocation (Pierre Crokaert)
 - SSPI auth: use canonical server hostname, clear SSPI context after
   successful auth (Nathanael Rensen)
 - build fixes for Open Watcom compiler (NormW)
 - fix Win32 error code handling for local ne_sock_prebind bind failure
 - Win32: support LFS, thread-safe OpenSSL (Diego Santa Cruz)
* Test suite:
 - fix SSL tests for recent OpenSSL

Changes in release 0.29.6:
* Don't abort SSL handshake with GnuTLS if a client cert is requested
  but none is configured/available (thanks to Patrick Ohly)
* Fix the method string passed to create_request hooks to have the same
  lifetime as the request object (Patrick Ohly)
* Docs updates.

Changes in release 0.29.5:
* Fix GnuTLS handshakes failures with 'TLS warning alert' (Bryan Cain)
* Further fix for SSPI support on Win32 (Danil Shopyrin)

Changes in release 0.29.4:
* Fix SNI support (Tobias Gruetzmacher)
* Fix possible Solaris linker errors if building static library
* Win32: Fix Kerberos authentication support with SSPI (Danil Shopyrin)
* Fix error handling when pulling a request body from an file
  (thanks to Lou Montulli)
* Fix ne_request_dispatch() return value for SOCKS proxy failure cases
* Tighten SSL cert ID checks to deny a wildcard match against an IP address

Changes in release 0.29.3:
* Change ne_sock_close() to no longer wait for SSL closure alert:
 - fixes possible hang with IIS servers when closing SSL connection
 - this reverts the behaviour with OpenSSL to match 0.28.x, and
   changes the behaviour with GnuTLS to match that with OpenSSL